cmake_minimum_required(VERSION 3.8)

project(Bullet4Unity)
enable_language(CSharp)

set(USE_GRAPHICAL_BENCHMARK OFF CACHE BOOL "")
set(BUILD_BULLET3 OFF CACHE BOOL "")
set(BUILD_CPU_DEMOS OFF CACHE BOOL "")
set(USE_GLUT OFF CACHE BOOL "")
set(BUILD_ENET OFF CACHE BOOL "")
set(BUILD_CLSOCKET OFF CACHE BOOL "")
set(BUILD_EXTRAS OFF CACHE BOOL "")
set(INSTALL_LIBS OFF CACHE BOOL "")
set(BUILD_UNIT_TESTS OFF CACHE BOOL "")
set(BULLET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bullet3/src)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DBT_ENABLE_PROFILE")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -DBT_ENABLE_PROFILE")


add_subdirectory(bullet3)
add_subdirectory(bullet4unity)
add_subdirectory(PInvokeGenerator)

